--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-less": "~0.9.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-newer": "^1.1.0",
     "jit-grunt": "^0.9.1"
   }
 }
