--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-imagemin": "^0.9.3",
