--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "grunt": "~0.4.2",
     "grunt-autoprefixer": "^2.2.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-imagemin": "^0.9.3",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-less": "~0.9.0",
