--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-newer": "^1.1.0",
+    "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.1"
   }
 }
