--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "grunt": "~0.4.2",
     "grunt-autoprefixer": "^2.2.0",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-imagemin": "^0.9.3",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-less": "~0.9.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-filerev": "^2.2.0",
     "grunt-newer": "^1.1.0",
+    "grunt-processhtml": "^0.3.7",
+    "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
-    "jit-grunt": "^0.9.1"
+    "jit-grunt": "^0.9.1",
+    "time-grunt": "^1.1.0"
   }
 }
