--- a/package.json
+++ b/package.json
@@ -21,5 +21,18 @@
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.1",
     "time-grunt": "^1.1.0"
+  },
+  "jspm": {
+    "directories": {
+      "lib": ".",
+      "packages": "jspm_packages"
+    },
+    "dependencies": {
+      "autosize": "github:jackmoore/autosize@^2.0.0",
+      "colorbox": "github:jackmoore/colorbox@^1.6.0",
+      "jquery.easing": "github:gdsmith/jquery.easing@^1.3.1",
+      "js-throttle-debounce": "npm:js-throttle-debounce@^0.1.1",
+      "modernizr": "github:Modernizr/Modernizr@^2.8.3"
+    }
   }
 }
