--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       "colorbox": "github:jackmoore/colorbox@^1.6.0",
       "jquery.easing": "github:gdsmith/jquery.easing@^1.3.1",
       "js-throttle-debounce": "npm:js-throttle-debounce@^0.1.1",
-      "modernizr": "github:Modernizr/Modernizr@^2.8.3"
+      "matchMedia": "github:paulirish/matchMedia.js@^0.2.0"
     }
   }
 }
